# metal_erfinv

./: CMakeLists.txt  README.md  build.sh  erfinv copy.metal  erfinv.metal  erfinv_nb.ipynb  erfinv_old.metal  main.mm  test.ipynb  test.py  test2.py  test3.py  test_all.py
